force-app/main/default/objects/BLN_PmtReqIdMapping__mdt/BLN_PmtReqIdMapping__mdt.object-meta.xml
<CustomObject>
    <description>FOUK-3977 This is used in BLN_SCUtility class</description>
    <label>Payment Request Id Mapping</label>
    <pluralLabel>Payment Request Id Mappings</pluralLabel>
</CustomObject>