force-app/main/default/objects/BLN_PmtReqIdMapping__mdt/fields/BLN_LookupValue__c.field-meta.xml
<CustomField>
    <fullName>BLN_LookupValue__c</fullName>
    <description>FOUK-10834 To store lookup values to determine cardtype master metadata</description>
    <label>Lookup Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>