force-app/main/default/objects/BLN_PmtReqIdMapping__mdt/fields/BLN_PaymentType__c.field-meta.xml
<CustomField>
    <fullName>BLN_PaymentType__c</fullName>
    <description>FOUK-3977 This is used in BLN_SCUtility class</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BB Cash</fullName>
                <default>true</default>
                <label>BB Cash</label>
            </value>
            <value>
                <fullName>BB Cheque</fullName>
            </value>
            <value>
                <fullName>BB Amex</fullName>
            </value>
            <value>
                <fullName>BB Diners</fullName>
            </value>
            <value>
                <fullName>BB Electron</fullName>
            </value>
            <value>
                <fullName>BB JCB</fullName>
            </value>
            <value>
                <fullName>BB Lost receipts Cash</fullName>
            </value>
            <value>
                <fullName>BB Lost receipts Cheque</fullName>
            </value>
            <value>
                <fullName>BB Mastercard</fullName>
            </value>
            <value>
                <fullName>BB Visa</fullName>
            </value>
            <value>
                <fullName>BB Waived Receipts</fullName>
            </value>
            <value>
                <fullName>BB Maestro (Switch) IN</fullName>
            </value>
            <value>
                <fullName>BB Maestro (Switch) NO IN</fullName>
            </value>
            <value>
                <fullName>BB Solo IN</fullName>
            </value>
            <value>
                <fullName>BB Solo NO IN</fullName>
            </value>
            <value>
                <fullName>BB Visa Delta</fullName>
            </value>
            <value>
                <fullName>BB Laser (debit)</fullName>
            </value>
            <value>
                <fullName>BB Staff sales</fullName>
            </value>
            <value>
                <fullName>BB Maestro International</fullName>
            </value>
            <value>
                <fullName>Chip &amp; Pin AMEX</fullName>
            </value>
            <value>
                <fullName>Chip &amp; Pin ARVAL PHH</fullName>
            </value>
            <value>
                <fullName>Chip &amp; Pin Diners</fullName>
            </value>
            <value>
                <fullName>Chip &amp; Pin Duet</fullName>
            </value>
            <value>
                <fullName>Chip &amp; Pin Intl Maestro</fullName>
            </value>
            <value>
                <fullName>Chip &amp; Pin JCB</fullName>
            </value>
            <value>
                <fullName>Chip &amp; Pin Laser</fullName>
            </value>
            <value>
                <fullName>Chip &amp; Pin MasterCard</fullName>
            </value>
            <value>
                <fullName>Chip &amp; Pin Solo</fullName>
            </value>
            <value>
                <fullName>Chip &amp; Pin UK Maestro</fullName>
            </value>
            <value>
                <fullName>Chip &amp; Pin Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>