force-app/main/default/objects/BLN_PmtReqIdMapping__mdt/fields/BLN_RequestId__c.field-meta.xml
<CustomField>
    <fullName>BLN_RequestId__c</fullName>
    <description>FOUK-3977 This is used in BLN_SCUtility class</description>
    <label>Request Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>